<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="14dp">

    <!-- Color circle -->
    <View
        android:id="@+id/viewColor"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/color_circle_description"/>

    <!-- Meeting content -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:contentDescription="@string/meeting_content_description">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_de_la_reunion"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_de_la_reunion"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Delete icon -->
    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/supprimer_la_reunion"/>
</LinearLayout>