...
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/btnOptions"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorBanner"
                android:contentDescription="@string/option"
                android:src="@drawable/ic_filter_list" />
        </FrameLayout>
...
        android:layout_below="@id/bannerLayout"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>

    <!-- Meeting add button -->
    <ImageButton
        android:id="@+id/fabAddMeeting"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
